--- a/attendance_app/android/app/src/main/AndroidManifest.xml
+++ b/attendance_app/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+   <uses-permission android:name="android.permission.INTERNET" />
+   <uses-permission android:name="android.permission.CAMERA" />
     <application
         android:label="attendance_monitoring_system"
         android:name="${applicationName}"
