--- a/attendance_app/pubspec.yaml
+++ b/attendance_app/pubspec.yaml
@@ -7,8 +7,12 @@ environment:
   sdk: '>=3.0.5 <4.0.0'
 
 dependencies:
+  mongo_dart: ^0.9.1
   flutter:
     sdk: flutter
+  http: ^1.1.0
+  qr_code_scanner: ^1.0.1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +21,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/
