--- a/attendance_app/pubspec.yaml
+++ b/attendance_app/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   http: ^1.1.0
   qr_code_scanner: ^1.0.1
   provider: ^6.0.5
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
